<resources>
    <string name="app_name">Patuli App</string>
    <string name="error_name_empty">Nama tidak boleh kosong</string>
    <string name="hello_blank_fragment">Nama tidak boleh kosong</string>
    <string name="error_email_empty">Email tidak boleh kosong</string>
    <string name="error_password_empty">Password tidak boleh kosong</string>
    <string name="error_email_not_valid">Email tidak valid</string>
    <string name="error_password_not_valid">Password minimal 8 karakter</string>
    <string name="register_success">Register Berhasil</string>
    <string name="error_password_not_match">Konfirmasi password tidak sesuai</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="login">Masuk</string>
    <string name="name">Nama</string>
    <string name="confirm_password">Konfirmasi Kata Sandi</string>
    <string name="register">Daftar</string>
    <string name="already_have_acc">Sudah Punya Akun?</string>
    <string name="masukkan_data_diri_anda">Masukkan Data Diri Anda</string>
    <string name="welcome">Selamat Datang di Patuli</string>
    <string name="dont_have_acc">Belum Punya Akun?</string>
    <string name="patuli">Patuli</string>
    <string name="password_placeholder">ISIWATONHAHAHAHAHHAHAHAHAHAHAHAHAH</string>
    <string name="save_changes">Simpan Perubahan</string>
    <string name="change_profile_picture">Ubah Foto</string>
    <string name="logout">Keluar</string>
    <string name="konfirmasi_kata_sandi_baru">Konfirmasi Kata Sandi Baru</string>
    <string name="title_translate_result">Hasil Terjemahan</string>
    <string name="start_lesson">Mulai Pembelajaran</string>
    <string name="content_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod, nibh ac vulputate vestibulum, dui enim eleifend lacus, vel iaculis felis augue nec libero. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod, nibh ac vulputate vestibulum, dui enim eleifend lacus, vel iaculis felis augue nec libero. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod, nibh ac vulputate vestibulum, dui enim eleifend lacus, vel iaculis felis augue nec libero. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod, nibh ac vulputate vestibulum, dui enim eleifend lacus, vel iaculis felis augue nec libero.</string>
    <string name="welcome_name">Halo, %1$s</string>
    <string name="quiz_progress">Kuis Diselesaikan %1$s/%2$s</string>
    <string name="time_needed">Membutuhkan %1$s jam</string>
    <string name="lesson_desc">Belajar mengenal huruf abjad</string>
    <string name="lesson_title">Abjad A-Z</string>
    <string name="change_password">Ubah Kata Sandi</string>
    <string name="show_more">Pelajari</string>
    <string name="quiz_desc">Kuis ini akan menguji kemampuan kalian dalam memperagakan gerakan bahasa isyarat mulai dari Abjad hingga Angka</string>
    <string name="panduan_quiz">Pada Kuis ini Anda diharapkan untuk memperagakan gerakan dari bahasa isyarat Bisindo, persiapkan diri Anda untuk melakukan gerakan melalui camera Anda masing-masing</string>
    <string name="quiz_progress_number">Kuis %1$s/%2$s</string>
    <string name="quiz_number">Nomor. %1$s</string>
    <string name="app_bar_quiz">Kuis %1$s</string>
    <string name="congratulation">Selamat Anda Berhasil Menyelesaikan Kuis</string>
    <string name="long_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae dui auctor, aliquam ipsum eu, dapibus erat. Nam vel augue vel ipsum hendrerit semper nec nec lectus. Etiam non odio vel metus vestibulum congue. Duis volutpat lorem sit amet nisi interdum, non feugiat sapien cursus. Nunc euismod, augue in hendrerit iaculis, nibh massa faucibus tellus, nec auctor ante nibh in risus. Aliquam erat volutpat. Donec sagittis lacus non tortor dignissim, vel euismod massa tincidunt. Duis gravida, metus ac euismod bibendum, risus elit vestibulum mauris, vitae cursus ligula quam a ante. Praesent a urna a nunc interdum lacinia. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vivamus id justo eu sapien sagittis convallis quis eget nisl. Nam aliquam, orci quis congue egestas, leo augue tincidunt velit, vitae euismod ipsum justo vel est. Fusce aliquet tellus in nibh interdum convallis</string>
    <string name="level_user">Level. %1$s</string>
    <string name="exp_quiz">+%1$s Experience</string>
    <string name="current_exp">%1$s / 100</string>
    <string name="joined_date">Bergabung %1$s</string>
    <string name="panduan_quiz_2">Selamat datang pada menu Kuis. \n\nPersiapkan diri Anda didepan kamera yang telah disediakan untuk memperagakan hasil pembelajaran bahasa isyarat Anda \n\nJangan ragu untuk terus mencoba ya..</string>
    <string name="lorem">Lorem ipsum Kuis ini akan menguji kemampuan kalian dalam memperagakan gerakan bahasa isyarat mulai dari Abjad hingga Angka </string>
    <string name="what_is_patuli">Apa itu Patuli ?</string>
    <string name="string_desc">Patuli (Pahlawan Tuli) adalah sebuah aplikasi yang bertujuan untuk membantu mempelajari dan menerjemahkan Bisindo (Bahasa Isyarat Indonesia) dengan mudah dan cepat.</string>
    <string name="desc_2">Bisindo adalah kependekan dari Bahasa Isyarat Indonesia, yaitu bahasa isyarat yang digunakan oleh orang-orang yang memiliki gangguan pendengaran di Indonesia.</string>
    <string name="apa_itu_bisindo">Apa itu Bisindo ?</string>
    <string-array name="models_spinner_titles">
        <item>MobileNet V1</item>
        <item>EfficientDet Lite0</item>
        <item>EfficientDet Lite1</item>
        <item>EfficientDet Lite2</item>
        <item>Abjad NonQuantized</item>
        <item>Abjad Quantized</item>
    </string-array>
</resources>