<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_lesson"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="12dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="12dp"
    android:elevation="4dp"
    android:background="@drawable/shape_rounded_grey"

    android:orientation="vertical"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/iv_lesson_photo"
        android:layout_width="80dp"
        android:layout_height="100dp"
        android:src="@drawable/common_google_signin_btn_icon_dark_focused"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_difficulty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="#58CD01"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="Mudah"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/iv_lesson_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_lesson_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/geologica_medium"
        android:text="@string/lesson_title"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/iv_lesson_photo"
        app:layout_constraintTop_toTopOf="@+id/iv_lesson_photo" />

    <TextView
        android:id="@+id/tv_lesson_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/geologica_regular"
        android:text="@string/lesson_desc"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/iv_lesson_photo"
        app:layout_constraintTop_toBottomOf="@+id/tv_lesson_title" />

    <ImageView
        android:id="@+id/iv_time_needed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_time_needed_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_lesson_desc"
        app:layout_constraintTop_toBottomOf="@+id/tv_lesson_desc" />

    <TextView
        android:id="@+id/tv_time_needed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/geologica_regular"
        android:text="@string/time_needed"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_time_needed"
        app:layout_constraintStart_toEndOf="@+id/iv_time_needed"
        app:layout_constraintTop_toTopOf="@+id/iv_time_needed" />

<!--    <Button-->
<!--        android:id="@+id/btn_start_lesson"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginEnd="8dp"-->
<!--        android:background="@drawable/shape_rounded_lighter_grey"-->
<!--        android:paddingRight="8dp"-->
<!--        android:paddingLeft="8dp"-->
<!--        android:paddingTop="5dp"-->
<!--        android:textSize="12sp"-->
<!--        android:paddingBottom="5dp"-->
<!--        android:fontFamily="@font/geologica_regular"-->
<!--        android:text="@string/show_more"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent">-->

<!--    </Button>-->


</androidx.constraintlayout.widget.ConstraintLayout>




